This is the second commit

--- a/HTML/practice.html
+++ b/HTML/practice.html
@@ -41,6 +41,9 @@
 
             <input type="submit" value="Log in">
         </form>
+
+        <h1>This is being added for git</h1>
+
     </body>
 </html>
 
