added boxmodel demo

--- a/CSS/demo/test.html
+++ b/CSS/demo/test.html
@@ -9,14 +9,14 @@
       <div id="parent">
 
         <div class="greenbox"></div>
-        <!-- <div class="redbox"></div> -->
+        <div class="redbox"></div>
 
       </div>
 
-
-      <!-- <div class="greenbox"></div> -->
-      
+      <!-- <h1>This is a block level element</h1>
+      <a>This is an inline element</a>
+      <img src="test.jpg">
+      <img src="test.jpg"> -->
+      <!-- <p>This is a block level element</p> -->
     </body>
-
-
 </html>
