--- a/CSS/redblock/block.html
+++ b/CSS/redblock/block.html
@@ -5,12 +5,12 @@
     </head>
 
     <body>
-        <div id="blue">
-            <div id="red">
-                <div id="green">
-
-                </div>
-            </div>    
+        <div class="flex-container">
+            <div id="blue">
+                <div id="red">
+                </div>    
+            </div>
         </div>
+       
     </body>
 </html>
