added js assignments

--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -1,11 +1,20 @@
 <html>
     <head>
-      <script>
-          document.write( " <img src='test.jpg' width=300 height=300> " )
+      <script>  
+         var names = ['Jon Snow', 'Arya', 'Cirsi', 'Tyrian', 'Greyworm'];
+
+         console.log(names[0])
+         console.log(names[1])
+
+         for(var index = 0; index < names.length; index++){
+            console.log( names[index] )
+         }
+
       </script>
     </head>
 
     <body>
-      
+
+    
     </body>
 </html>
